--- a/webroot/css/datsumou/reserve/index.css
+++ b/webroot/css/datsumou/reserve/index.css
@@ -1,3 +1,17 @@
+.reserve-title {
+  font-size: 18px;
+  margin-top: 5px;
+  padding: 12px 0;
+  background: #fff;
+  border-top: 1px solid #CCC4A7;
+  text-align: center;
+  font-weight: bold;
+}
+
+.reserve-form{
+  border-top: 1px solid #E0DCCC;
+}
+
 .reserve-section .reserve-question-mod {
   padding-bottom: 0 !important; }
 
@@ -33,6 +47,32 @@
 
 .reserve-section .reserve-input {
   padding: 10px 16px; }
+    .reserve-section .reserve-step{
+    width: 200%;
+    display: flex;
+  }
+  .reserve-section .next{
+    transform: translateX(-50%);
+    transition-duration:0.5s;
+    transition-timing-function:ease-in-out;
+  }
+  .reserve-section .next .reserve-step-1st{
+    transform: translateX(-50%);
+    transition-duration:0.5s;
+    transition-timing-function:ease-in-out;    
+  }
+  .reserve-section .reserve-step-1st{
+    width: 50%;
+  }
+  .reserve-section .reserve-step-2nd{
+    width: 50%;
+  }
+  .reserve-section .js-reserve-step-2nd{
+      display: none;
+  }
+  .reserve-section .next .js-reserve-step-2nd{
+      display: block;
+  }
   .reserve-section .reserve-input input, .reserve-section .reserve-input select {
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
