--- a/webroot/css/datsumou/reserve/index.css
+++ b/webroot/css/datsumou/reserve/index.css
@@ -163,9 +163,15 @@
     .reserve-section .reserve-input .reserve-input-radio-wrap .reserve-input-radio:not(:first-child) {
       padding-left: 10px; }
     .reserve-section .reserve-input .reserve-input-radio-wrap .reserve-input-radio {
-      width: 100%; }
+      width: 100%;
+      position: relative;
+    }
       .reserve-section .reserve-input .reserve-input-radio-wrap .reserve-input-radio input {
-        display: none; }
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: 0;
+      }
       .reserve-section .reserve-input .reserve-input-radio-wrap .reserve-input-radio input[type="radio"]:checked + .reserve-input-inner > span {
         background-color: #6AADBF; }
       .reserve-section .reserve-input .reserve-input-radio-wrap .reserve-input-radio span {
@@ -193,10 +199,14 @@
         text-decoration: none;
         font-weight: bold;
         font-size: 11px;
-        color: #ffffff;
+        color: #6AADBF;
+        background-color: white;
         border-radius: .25em;
         padding: 1em 1.5em;
-        background-color: #6AADBF; }
+        border: 1px solid #6AADBF; }
+.reserve-section .reserve-scroll-select ul li .reserve-scroll-select-item.active {
+  color: #ffffff;
+  background-color: #6AADBF;}
 
 .reserve-section .reserve-subquestion .reserve-subquestion-text-top {
   padding: 0 16px; }
