--- a/webroot/css/datsumou/kuchikomi-entry_bk200203.css
+++ b/webroot/css/datsumou/kuchikomi-entry_bk200203.css
@@ -1,5 +1,10 @@
-.sp {
-  display: none; }
+@media (min-width: 751px) {
+  .pc {
+    display: none; } }
+
+@media (max-width: 750px) {
+  .sp {
+    display: none; } }
 
 .kuchikomi-entry-title {
   font-size: 16px;
@@ -35,70 +40,30 @@
 .question-area table {
   border-collapse: collapse;
   width: 100%; }
-  .question-area table td .td-inner-wrap .input.radio {
-    display: flex;
-    position:relative;
-    justify-content: center;
-    overflow: hidden;
-}
-
- .question-area table td .td-inner-wrap .input.radio label {
-  flex: 1 1 auto;
-  display: block;
-  text-align: center;
-  margin: 0 .25em;
-  border: 1px solid #e1e1e1;
-  padding: .75em.5em;
-  border-radius: 4px;
- }
- .mr-10 {
-    margin-right: 10px;
-  }
-  .question-area table td .td-inner-wrap .input.radio label:first-child {
-    margin-left: 0;
-  }
- .question-area table td .td-inner-wrap .input.radio label.active {
-   background-color: #6AADBF;
- }
- .question-area table td .td-inner-wrap .input.radio label input[type="radio"] {
-   position: absolute;
-   visibility: hidden;
-  }
-  .question-area table td .td-inner-wrap .td-inner .select {
-    position: relative;
-  }
-  .question-area table td .select select.question {
-    width: calc(100% - 1em);
-    margin-left: 1em;
-    padding: 0 1em;
-    box-sizing: border-box;
-  }
-  .question-area table td .td-inner-wrap .td-inner .select select {
-    position: relative;
-    -moz-appearance: inherit;
-    -webkit-appearance: inherit;
-    appearance: inherit;
-    z-index: 2;
-  }
-  .question-area table td .td-inner-wrap .td-inner .select .fa-chevron-down {
-    position: absolute;
-    top: 50%;
-    right: 2em;
-    transform: translateY(-50%);
-    z-index: 1;
-  }
-  .question-area table th, .question-area table td {
-    display: block; }
-  .question-area table th {
-    width: 100%;
-    border-top: 1px solid #E0DCCC;
-    border-bottom: 1px solid #E0DCCC; }
-  .question-area table td .td-inner-wrap {
-    padding: 1em 16px; }
-    .question-area table td .td-inner-wrap .td-inner {
-      padding: 0 2em; }
-  .question-area table tr:last-child {
-    border-bottom: 1px solid #E0DCCC; }
+  @media (min-width: 751px) {
+    .question-area table th {
+      border-top: 1px solid #E0DCCC;
+      border-right: 1px solid #E0DCCC;
+      border-bottom: 1px solid #E0DCCC; }
+    .question-area table td {
+      border-top: 1px solid #E0DCCC;
+      border-left: 1px solid #E0DCCC;
+      border-bottom: 1px solid #E0DCCC; }
+      .question-area table td .td-inner-wrap {
+        padding: 1em; } }
+  @media (max-width: 750px) {
+    .question-area table th, .question-area table td {
+      display: block; }
+    .question-area table th {
+      width: 100%;
+      border-top: 1px solid #E0DCCC;
+      border-bottom: 1px solid #E0DCCC; }
+    .question-area table td .td-inner-wrap {
+      padding: 1em 16px; }
+      .question-area table td .td-inner-wrap .td-inner {
+        padding: 0 2em; }
+    .question-area table tr:last-child {
+      border-bottom: 1px solid #E0DCCC; } }
   .question-area table th {
     background-color: #ffffff; }
     .question-area table th .th-inner {
@@ -152,19 +117,6 @@
   display: flex;
 justify-content: flex-start;
 align-items: center;}
-.question-area table td .td-inner.flex > span {
-  flex: 0 1 auto;
-}
-.question-area table td .td-inner.flex > .wrap {
-  flex: 1 0 auto;
-  border: #e1e1e1 1px solid;
-  border-radius: 4px;
-  padding: .5em 1em;
-  /* margin-left: 10px; */
-}
-.question-area table td .td-inner.flex > .wrap .fa-chevron-down {
-  right: 1em;
-}
     .question-area table td textarea {
       background-color: #F9F7F5;
       border: none;
