--- a/webroot/css/datsumou/common.css
+++ b/webroot/css/datsumou/common.css
@@ -280,6 +280,7 @@
   left: 0;
   margin: auto;
   height: 66px;
+  max-width: 600px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -290,6 +291,8 @@
   .shop-footer .kuchikomi-button {
     width: 60%;
     background-color: #FF4E4E; }
+.shop-footer .kuchikomi-button.kuchikomi-only {
+  width: 100%; }
     .shop-footer .kuchikomi-button .kuchikomi-button-text {
       padding-left: .5em; }
   .shop-footer .reservatopn-button {
