--- a/webroot/css/datsumou/shop/index.css
+++ b/webroot/css/datsumou/shop/index.css
@@ -98,7 +98,8 @@
     -webkit-align-items: center;
        -moz-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+  flex-wrap: wrap}
     .shop-top .shop-top-desc-area .shop-top-desc-info .shop-top-desc-info-common {
       display: -webkit-box;
       display: -webkit-flex;
