--- a/webroot/css/datsumou_bk200204.css
+++ b/webroot/css/datsumou_bk200204.css
@@ -945,7 +945,7 @@ body {
 /* パンくず */
 .Search__breadcrumbs {
   width: 100%;
-  height: auto;
+  height: 34px;
   margin-top: 1em;
   border-top: 1px solid #e1ddcc;
   border-bottom: 1px solid #e1ddcc;
@@ -965,13 +965,6 @@ body {
   overflow-scrolling: touch;
   overflow: auto;
   white-space: nowrap;
-}
-.Search__breadcrumbs ol {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-.Search__breadcrumbs ol::-webkit-scrollbar {
-  display:none;
 }
 .Search__breadcrumbs li {
   position: relative;
