--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -111,3 +111,25 @@ p {
   display: block;
   text-decoration: none;
   color: inherit; }
+
+#suggest {
+  position: absolute;
+  background-color: #FFFFFF;
+  border: 1px solid #CCCCFF;
+  font-size: 90%;
+  width: 200px;
+}
+#suggest div {
+  display: block;
+  padding: 5px 10px;
+  width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+#suggest div.select{ /* キー上下で選択した場合のスタイル */
+  color: #FFFFFF;
+  background-color: #3366FF;
+}
+#suggest div.over{ /* マウスオーバ時のスタイル */
+  background-color: #99CCFF;
+}
