--- a/webroot/css/datsumou/kuchikomi-entry.css
+++ b/webroot/css/datsumou/kuchikomi-entry.css
@@ -1,192 +1,204 @@
 .sp {
-  display: none; }
+    display: none; }
 
 .kuchikomi-entry-title {
-  font-size: 16px;
-  font-weight: bold;
-  padding: 1em 16px; }
+    font-size: 16px;
+    font-weight: bold;
+    padding: 1em 16px; }
 
 .rating-area {
-  padding: 1em 16px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-     -moz-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-     -moz-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
-  .rating-area .rating-star img {
+    padding: 1em 16px;
+    /*display: -webkit-box;*/
+    /*display: -webkit-flex;*/
+    /*display: -moz-box;*/
+    /*display: -ms-flexbox;*/
+    /*display: flex;*/
+    /*-webkit-box-pack: justify;*/
+    /*-webkit-justify-content: space-between;*/
+    /*   -moz-box-pack: justify;*/
+    /*    -ms-flex-pack: justify;*/
+    /*        justify-content: space-between;*/
+    /*-webkit-box-align: center;*/
+    /*-webkit-align-items: center;*/
+    /*   -moz-box-align: center;*/
+    /*    -ms-flex-align: center;*/
+    /*        align-items: center;*/
+    display: none; }
+.rating-area .rating-star img {
     margin-right: .5em; }
-  .rating-area .rating-number {
+.rating-area .rating-number {
     font-size: 24px; }
 
 .question-title {
-  padding: 1em 16px;
-  text-align: center; }
+    padding: 1em 16px;
+    border-top: 1px solid #E0DCCC;
+    text-align: center; }
 
 .question-area table {
-  border-collapse: collapse;
-  width: 100%; }
-  .question-area table td .td-inner-wrap .input.radio {
+    border-collapse: collapse;
+    width: 100%; }
+.question-area table td .td-inner-wrap .input.radio {
     display: flex;
     position:relative;
     justify-content: center;
     overflow: hidden;
 }
 
- .question-area table td .td-inner-wrap .input.radio label {
-  flex: 1 1 auto;
-  display: block;
-  text-align: center;
-  margin: 0 .25em;
-  border: 1px solid #e1e1e1;
-  padding: .75em.5em;
-  border-radius: 4px;
- }
- .mr-10 {
+.question-area table td .td-inner-wrap .input.radio label {
+    flex: 1 1 auto;
+    display: block;
+    text-align: center;
+    margin: 0 .25em;
+    border: 1px solid #e1e1e1;
+    padding: .75em.5em;
+    border-radius: 4px;
+}
+.mr-10 {
     margin-right: 10px;
-  }
-  .question-area table td .td-inner-wrap .input.radio label:first-child {
+}
+.question-area table td .td-inner-wrap .input.radio label:first-child {
     margin-left: 0;
-  }
- .question-area table td .td-inner-wrap .input.radio label.active {
-   background-color: #6AADBF;
- }
- .question-area table td .td-inner-wrap .input.radio label input[type="radio"] {
-   position: absolute;
-   visibility: hidden;
-  }
-  .question-area table td .td-inner-wrap .td-inner .select {
+}
+.question-area table td .td-inner-wrap .input.radio label.active {
+    background-color: #6AADBF;
+}
+.question-area table td .td-inner-wrap .input.radio label input[type="radio"] {
+    position: absolute;
+    visibility: hidden;
+}
+.question-area table td .td-inner-wrap .td-inner .select {
     position: relative;
-  }
-  .question-area table td .select select.question {
+}
+.question-area table td .select select.question {
     width: calc(100% - 1em);
     margin-left: 1em;
     padding: 0 1em;
     box-sizing: border-box;
-  }
-  .question-area table td .td-inner-wrap .td-inner .select select {
+}
+.question-area table td .td-inner-wrap .td-inner .select select {
     position: relative;
     -moz-appearance: inherit;
     -webkit-appearance: inherit;
     appearance: inherit;
     z-index: 2;
-  }
-  .question-area table td .td-inner-wrap .td-inner .select .fa-chevron-down {
+}
+.question-area table td .td-inner-wrap .td-inner .select .fa-chevron-down {
     position: absolute;
     top: 50%;
     right: 2em;
     transform: translateY(-50%);
     z-index: 1;
-  }
-  .question-area table th, .question-area table td {
+}
+.question-area table th, .question-area table td {
     display: block; }
-  .question-area table th {
+.question-area table th {
     width: 100%;
     border-top: 1px solid #E0DCCC;
     border-bottom: 1px solid #E0DCCC; }
-  .question-area table td .td-inner-wrap {
+.question-area table td .td-inner-wrap {
     padding: 1em 16px; }
-    .question-area table td .td-inner-wrap .td-inner {
-      padding: 0 2em; }
-  .question-area table tr:last-child {
+.question-area table td .td-inner-wrap .td-inner {
+    padding: 0 2em; }
+.question-area table tr:last-child {
     border-bottom: 1px solid #E0DCCC; }
-  .question-area table th {
+.question-area table th {
     background-color: #ffffff; }
-    .question-area table th .th-inner {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-         -moz-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      padding: 1em 16px; }
-      .question-area table th .th-inner .question-number {
-        background-color: #E1E1E1;
-        padding: .5em; }
-      .question-area table th .th-inner .question-text {
-        padding-left: 1em;
-        text-align: left; }
-  .question-area table td {
+.question-area table th .th-inner {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 1em 16px; }
+.question-area table th .th-inner .question-number {
+    background-color: #E1E1E1;
+    padding: .5em; }
+.question-area table th .th-inner .question-text {
+    padding-left: 1em;
+    text-align: left; }
+.question-area table td {
     vertical-align: top; }
-    .question-area table td input {
-      background-color: #F9F7F5;
-      border: none;
-      width: 100%; }
-    .question-area table td input::-webkit-input-placeholder {
-      color: #B5B5B5; }
-    .question-area table td input:-moz-placeholder {
-      color: #B5B5B5; }
-    .question-area table td input::-moz-placeholder {
-      color: #B5B5B5; }
-    .question-area table td input:-ms-input-placeholder {
-      color: #B5B5B5; }
-    .question-area table td input::-ms-input-placeholder {
-      color: #B5B5B5; }
-    .question-area table td input::placeholder {
-      color: #B5B5B5; }
-    .question-area table td select {
-      width: 100%;
-      background: transparent;
-      color: black;
-      border: none; }
+.question-area table td input {
+    background-color: #F9F7F5;
+    border: none;
+    width: 100%; }
+.question-area table td input.errorColor {
+    border: 1px solid red;
+}
+.question-area table td input::-webkit-input-placeholder {
+    color: #B5B5B5; }
+.question-area table td input:-moz-placeholder {
+    color: #B5B5B5; }
+.question-area table td input::-moz-placeholder {
+    color: #B5B5B5; }
+.question-area table td input:-ms-input-placeholder {
+    color: #B5B5B5; }
+.question-area table td input::-ms-input-placeholder {
+    color: #B5B5B5; }
+.question-area table td input::placeholder {
+    color: #B5B5B5; }
+.question-area table td select {
+    width: 100%;
+    background: transparent;
+    color: black;
+    border: none; }
+
+.question-area table td select.errorColor {
+    border: 1px solid red;
+}
 
 .question-area table td select.question {
-  width: 70%;
-  background: transparent;
-  color: black;
-  border: none; }
+    width: 70%;
+    background: transparent;
+    color: black;
+    border: none; }
 .question-area table td .td-inner.flex {
-  display: flex;
-justify-content: flex-start;
-align-items: center;}
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;}
 .question-area table td .td-inner.flex > span {
-  flex: 0 1 auto;
+    flex: 0 1 auto;
 }
 .question-area table td .td-inner.flex > .wrap {
-  flex: 1 0 auto;
-  /* border: #e1e1e1 1px solid; */
-  border-radius: 4px;
-  padding: .5em 1em;
-  /* margin-left: 10px; */
+    flex: 1 0 auto;
+    /* border: #e1e1e1 1px solid; */
+    border-radius: 4px;
+    padding: .5em 1em;
+    /* margin-left: 10px; */
 }
 .question-area table td .td-inner.flex > .wrap .fa-chevron-down {
-  right: 1em;
+    right: 1em;
 }
-    .question-area table td textarea {
-      background-color: #F9F7F5;
-      border: none;
-      width: 100%; }
-    .question-area table td textarea::-webkit-input-placeholder {
-      color: #B5B5B5; }
-    .question-area table td textarea:-moz-placeholder {
-      color: #B5B5B5; }
-    .question-area table td textarea::-moz-placeholder {
-      color: #B5B5B5; }
-    .question-area table td textarea:-ms-input-placeholder {
-      color: #B5B5B5; }
-    .question-area table td textarea::-ms-input-placeholder {
-      color: #B5B5B5; }
-    .question-area table td textarea::placeholder {
-      color: #B5B5B5; }
-    .question-area table td .td-inner-wrap:not(:first-child) {
-      border-top: 1px solid #E0DCCC; }
+.question-area table td textarea {
+    background-color: #F9F7F5;
+    border: none;
+    width: 100%; }
+.question-area table td textarea.errorColor {
+    border: 1px solid red;
+}
+.question-area table td textarea::-webkit-input-placeholder {
+    color: #B5B5B5; }
+.question-area table td textarea:-moz-placeholder {
+    color: #B5B5B5; }
+.question-area table td textarea::-moz-placeholder {
+    color: #B5B5B5; }
+.question-area table td textarea:-ms-input-placeholder {
+    color: #B5B5B5; }
+.question-area table td textarea::-ms-input-placeholder {
+    color: #B5B5B5; }
+.question-area table td textarea::placeholder {
+    color: #B5B5B5; }
+.question-area table td .td-inner-wrap:not(:first-child) {
+    border-top: 1px solid #E0DCCC; }
 
 .image-upload {
-  padding: 1em 16px; }
-  .image-upload .image-upload-area {
+    padding: 1em 16px; }
+.image-upload .image-upload-area {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -194,47 +206,47 @@ align-items: center;}
     display: flex;
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
-       -moz-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -moz-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: center;
     -webkit-align-items: center;
-       -moz-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    .image-upload .image-upload-area .image-upload-item .input-image {
-      background-color: #B5B5B5;
-      padding: 1em;
-      display: inline-block;
-      border-radius: .25em;
-      cursor: pointer; }
-      .image-upload .image-upload-area .image-upload-item .input-image input {
-        display: none; }
-    .image-upload .image-upload-area .image-upload-item .preview-image {
-      position: relative; }
-      .image-upload .image-upload-area .image-upload-item .preview-image img {
-        width: 40px;
-        height: 40px; }
-      .image-upload .image-upload-area .image-upload-item .preview-image .preview-image-cancel {
-        position: absolute;
-        top: 4px;
-        right: 4px;
-        color: #ffffff;
-        cursor: pointer; }
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+.image-upload .image-upload-area .image-upload-item .input-image {
+    background-color: #B5B5B5;
+    padding: 1em;
+    display: inline-block;
+    border-radius: .25em;
+    cursor: pointer; }
+.image-upload .image-upload-area .image-upload-item .input-image input {
+    display: none; }
+.image-upload .image-upload-area .image-upload-item .preview-image {
+    position: relative; }
+.image-upload .image-upload-area .image-upload-item .preview-image img {
+    width: 40px;
+    height: 40px; }
+.image-upload .image-upload-area .image-upload-item .preview-image .preview-image-cancel {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    color: #ffffff;
+    cursor: pointer; }
 
 .question-thanks {
-  padding: 1em 16px;
-  text-align: center; }
+    padding: 1em 16px;
+    text-align: center; }
 
 .kuchikomi-entry-post {
-  border-top: 1px solid #E0DCCC;
-  padding: 1em 16px; }
-  .kuchikomi-entry-post .kuchikomi-entry-button {
+    border-top: 1px solid #E0DCCC;
+    padding: 1em 16px; }
+.kuchikomi-entry-post .kuchikomi-entry-button {
     border: none;
     width: 100%;
     background-color: #FF4E4E; }
-    .kuchikomi-entry-post .kuchikomi-entry-button .kuchikomi-entry-button-text {
-      padding-left: .5em; }
+.kuchikomi-entry-post .kuchikomi-entry-button .kuchikomi-entry-button-text {
+    padding-left: .5em; }
 
 .border {
     border: #e1e1e1 1px solid;
